--- a/service-mate.csproj
+++ b/service-mate.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>service_mate</RootNamespace>
+    <RootNamespace>ServiceMate</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
