--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ServiceMateConnectionString": "Server=localhost;Port=8081;Database=service-mate;User Id=root;Password=root-pw;"
-  }
+  "AllowedHosts": "*"
 }
