--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8081:3306"
     env_file:
-      - ./.env
+      - ./MySql/.env
   backend:
     build: .
     ports: 
