add dependencies for JWT-based authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "abcde12345",
+    "Issuer": "https://localhost:7239",
+    "Audience": "https://localhost:7239"
+  }
 }
